# darkbotV2-disnake-

./: .breakpoints  blocked_names.txt  cs-channels.json  main.py  pyproject.toml  web.py
backups/: cross-server (copy).py
cogs/: cross-server.py  help_commands.py  misc.py  moderation.py  music.py  owcmds.py  youtube.py
