[tool.poetry]
name = "main-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
DiscordUtils = {extras = ["voice"], version = "^1.3.4"}
jishaku = { git = "https://github.com/Z1R343L/jishaku", branch = "master" }
youtube-search-python = "^1.4.9"
Flask = "^2.0.1"
"dislash.py" = "^1.4.9"
disnake = "^2.1.4"
discord = "^1.7.3"
youtube_dl = "^2021.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
